# fluent-tray

./: .gitignore  Doxyfile  README.md  demo.cpp
.github/codeql/: codeql-config.yml
.github/workflows/: codeql.yml  coveralls.yml  coverity.yml  mingw.yml  test.yaml  windows.yml
demo/: CMakeLists.txt  README.md  demo.cpp
docs/: _r_e_a_d_m_e_8md.html  annotated.html  classes.html  classfluent__tray_1_1_fluent_menu-members.html  classfluent__tray_1_1_fluent_menu.html  classfluent__tray_1_1_fluent_tray-members.html  classfluent__tray_1_1_fluent_tray.html  dir_d44c64559bbebec7f509842c48db8b23.html  doxygen_crawl.html  files.html  fluent__tray_8hpp.html  fluent__tray_8hpp_source.html  functions.html  functions_func.html  globals.html  globals_defs.html  group__fluent__tray.html  group__util.html  index.html  md__r_e_a_d_m_e.html  menudata.js  namespacefluent__tray.html  namespacefluent__tray_1_1util.html  namespacemembers.html  namespacemembers_enum.html  namespacemembers_func.html  namespaces.html  namespaceutil.html  pages.html  topics.html
docs/search/: all_1.js  all_10.js  all_11.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  defines_0.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  files_0.js  functions_0.js  functions_1.js  functions_10.js  functions_11.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  functions_d.js  (+7 more)
include/: fluent_tray.hpp
tests/: CMakeLists.txt  doctest.h  menu_test.cpp  string_test.cpp  test.cpp  test.hpp  test_bits.cpp  test_color.cpp  test_menu.cpp  test_string.cpp  test_tray.cpp  tray_test.cpp
